[package]
name = "heartless"
version = "0.1.0"
edition = "2021"
authors = ["oooutlk <oooutlk@outlook.com>"]
license = "MIT/Apache-2.0"
keywords = ["hearts", "card", "game", "console", "mshearts"]
readme = "README.md"
repository = "https://github.com/oooutlk/heartless"
categories = ["games", "command-line-utilities"]
description = "a card game inspired by mshearts"

[dependencies]
altio = { version = "0.2", default-features = false }
clap = { version = "4.4.10", features = ["derive"] }
fastrand = "2.0.1"
once_cell = { version = "1.19.0" }
wait-timeout = "0.2.0"

[features]
altio = ["altio/altio"]
test-replica = []
